Add itens no menu

--- a/index.html
+++ b/index.html
@@ -9,8 +9,17 @@
   <body>
     <div class="navbar">
       <div class="logo">
-        <img width="125px" src="./techdog.png" alt="logo" />
+        <img width="125px" src="./img/techdog.png" alt="logo" />
       </div>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Products</a></li>
+          <li><a href="#">About</a></li>
+          <li><a href="#">Contacts</a></li>
+          <li><a href="#">Account</a></li>
+        </ul>
+      </nav>
     </div>
   </body>
 </html>
