--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <div class="navbar">
       <div class="logo">
-        <img width="125px" src="./img/techdog.png" alt="logo" />
+        <img width="125px" src="./img/techdog.png" alt="Logo" />
       </div>
       <nav>
         <ul>
