--- a/index.html
+++ b/index.html
@@ -5,21 +5,42 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Pike Nike</title>
+    <link href="./style.css" rel="stylesheet" />
   </head>
   <body>
-    <div class="navbar">
-      <div class="logo">
-        <img width="125px" src="./img/techdog.png" alt="Logo" />
+    <div class="header">
+      <div class="conteiner">
+        <div class="navbar">
+          <div class="logo">
+            <img width="100px" src="./img/techdoglogo.png" alt="Logo" />
+          </div>
+          <nav>
+            <ul>
+              <li><a href="#">Home</a></li>
+              <li><a href="#">Products</a></li>
+              <li><a href="#">About</a></li>
+              <li><a href="#">Contacts</a></li>
+              <li><a href="#">Account</a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="row">
+          <div class="col-2">
+            <h1>Give Your Workout <br />A New Style!</h1>
+            <br />
+
+            <p>
+              Success isn't always about greatness. It's about
+              consistency.Consistent <br />
+              hard work gains success. greatness will come.
+            </p>
+            <a href="#" class="botao">Explore Now &#8594;</a>
+          </div>
+          <div class="col-2">
+            <img src="./img/image1.png" alt="img png" />
+          </div>
+        </div>
       </div>
-      <nav>
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">About</a></li>
-          <li><a href="#">Contacts</a></li>
-          <li><a href="#">Account</a></li>
-        </ul>
-      </nav>
     </div>
   </body>
 </html>
