--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
               <li><a href="#">Account</a></li>
             </ul>
           </nav>
+          <img width="30px" src="./img/cart.png" alt="cart" />
         </div>
         <div class="row">
           <div class="col-2">
