add categorias ao site

--- a/index.html
+++ b/index.html
@@ -32,18 +32,33 @@
         </div>
         <div class="row">
           <div class="col-2">
-            <h1>Give Your Workout <br />A New Style!</h1>
+            <h1>Dê seu treino <br />Um Novo Estilo!</h1>
             <br />
 
             <p>
-              Success isn't always about greatness. It's about
-              consistency.Consistent <br />
-              hard work gains success. greatness will come.
+              O sucesso nem sempre tem a ver com grandeza. É sobre
+              consistência.Consistente<br />
+              o trabalho árduo obtém sucesso. a grandeza virá.
             </p>
             <a href="#" class="botao">Explore Now &#8594;</a>
           </div>
           <div class="col-2">
             <img src="./img/image1.png" alt="img png" />
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class="categories">
+      <div class="small-container">
+        <div class="row">
+          <div class="col-3">
+            <img src="./img/category-1.jpg" alt="" />
+          </div>
+          <div class="col-3">
+            <img src="./img/category-2.jpg" alt="" />
+          </div>
+          <div class="col-3">
+            <img src="./img/category-3.jpg" alt="" />
           </div>
         </div>
       </div>
