--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
+   
   </head>
   <body>
     <div class="header">
@@ -61,6 +62,78 @@
             <img src="./img/category-3.jpg" alt="" />
           </div>
         </div>
+      </div>
+    </div>
+
+    <div class="small-container">
+      <h2 class="title">Featured Products</h2>
+      <div class="row">
+        <div class="col-4">
+          <img src="./img/product-1.jpg" />
+          <h4>Red Printed T-shirt</h4>
+          <p>R$ 250,00</p>
+          
+          </div>
+          <div class="col-4">
+            <img src="./img/product-2.jpg" />
+            <h4>Red Printed T-shirt</h4>
+            <p>R$ 250,00</p>
+            </div>
+            <div class="col-4">
+              <img src="./img/product-3.jpg" />
+              <h4>Red Printed T-shirt</h4>
+              <p>R$ 250,00</p>
+              </div>
+              <div class="col-4">
+                <img src="./img/product-4.jpg" />
+                <h4>Red Printed T-shirt</h4>
+                <p>R$ 250,00</p>
+                </div>                     
+        </div>
+        <h2 class="title">Last Products</h2>
+        <div class="row">
+          <div class="col-4">
+            <img src="./img/product-5.jpg" />
+            <h4>Red Printed T-shirt</h4>
+            <p>R$ 250,00</p>
+            
+            </div>
+            <div class="col-4">
+              <img src="./img/product-6.jpg" />
+              <h4>Red Printed T-shirt</h4>
+              <p>R$ 250,00</p>
+              </div>
+              <div class="col-4">
+                <img src="./img/product-7.jpg" />
+                <h4>Red Printed T-shirt</h4>
+                <p>R$ 250,00</p>
+                </div>
+                <div class="col-4">
+                  <img src="./img/product-8.jpg" />
+                  <h4>Red Printed T-shirt</h4>
+                  <p>R$ 250,00</p>
+                  </div>
+                  <div class="col-4">
+                    <img src="./img/product-9.jpg" />
+                    <h4>Red Printed T-shirt</h4>
+                    <p>R$ 250,00</p>
+                    </div>
+                    <div class="col-4">
+                      <img src="./img/product-10.jpg" />
+                      <h4>Red Printed T-shirt</h4>
+                      <p>R$ 250,00</p>
+                      </div>
+                      <div class="col-4">
+                        <img src="./img/product-11.jpg" />
+                        <h4>Red Printed T-shirt</h4>
+                        <p>R$ 250,00</p>
+                        </div>
+                        <div class="col-4">
+                          <img src="./img/product-12.jpg" />
+                          <h4>Red Printed T-shirt</h4>
+                          <p>R$ 250,00</p>
+                          </div>            
+          </div>
       </div>
     </div>
   </body>
