--- a/index.html
+++ b/index.html
@@ -66,72 +66,72 @@
     </div>
 
     <div class="small-container">
-      <h2 class="title">Featured Products</h2>
+      <h2 class="title">Produtos Em Destaque</h2>
       <div class="row">
         <div class="col-4">
           <img src="./img/product-1.jpg" />
-          <h4>Red Printed T-shirt</h4>
-          <p>R$ 250,00</p>
+          <h4>Camisa Vermelha</h4>
+          <p>R$ 225,00</p>
           
           </div>
           <div class="col-4">
             <img src="./img/product-2.jpg" />
-            <h4>Red Printed T-shirt</h4>
-            <p>R$ 250,00</p>
+            <h4>Tênis Preto</h4>
+            <p>R$ 300,00</p>
             </div>
             <div class="col-4">
               <img src="./img/product-3.jpg" />
-              <h4>Red Printed T-shirt</h4>
-              <p>R$ 250,00</p>
+              <h4>Calças De Moletom Masculina</h4>
+              <p>R$ 199,99</p>
               </div>
               <div class="col-4">
                 <img src="./img/product-4.jpg" />
-                <h4>Red Printed T-shirt</h4>
-                <p>R$ 250,00</p>
+                <h4>Camizeta Azul</h4>
+                <p>R$ 200,00</p>
                 </div>                     
         </div>
-        <h2 class="title">Last Products</h2>
+        <h2 class="title">Últimos Produtos</h2>
         <div class="row">
           <div class="col-4">
             <img src="./img/product-5.jpg" />
-            <h4>Red Printed T-shirt</h4>
-            <p>R$ 250,00</p>
+            <h4>Tênis Brabo Branco</h4>
+            <p>R$ 350,00</p>
             
             </div>
             <div class="col-4">
               <img src="./img/product-6.jpg" />
-              <h4>Red Printed T-shirt</h4>
-              <p>R$ 250,00</p>
+              <h4>Camisa Preta Da Puma</h4>
+              <p>R$ 150,00</p>
               </div>
               <div class="col-4">
                 <img src="./img/product-7.jpg" />
-                <h4>Red Printed T-shirt</h4>
-                <p>R$ 250,00</p>
+                <h4>Meias</h4>
+                <p>R$ 89,90</p>
                 </div>
                 <div class="col-4">
                   <img src="./img/product-8.jpg" />
-                  <h4>Red Printed T-shirt</h4>
-                  <p>R$ 250,00</p>
+                  <h4>Relógio Preto Da Fossil</h4>
+                  <p>R$ 450,00</p>
                   </div>
                   <div class="col-4">
                     <img src="./img/product-9.jpg" />
-                    <h4>Red Printed T-shirt</h4>
+                    <h4>Relógio Preto Esportivo</h4>
                     <p>R$ 250,00</p>
                     </div>
                     <div class="col-4">
                       <img src="./img/product-10.jpg" />
-                      <h4>Red Printed T-shirt</h4>
-                      <p>R$ 250,00</p>
+                      <h4>Tênis Esportivo Pike França</h4>
+                      <p>R$ 500,00</p>
                       </div>
                       <div class="col-4">
                         <img src="./img/product-11.jpg" />
-                        <h4>Red Printed T-shirt</h4>
-                        <p>R$ 250,00</p>
+                        <h4>Tênis Social Cinza</h4>
+                        <p>R$ 300,00</p>
                         </div>
                         <div class="col-4">
                           <img src="./img/product-12.jpg" />
-                          <h4>Red Printed T-shirt</h4>
-                          <p>R$ 250,00</p>
+                          <h4>Calça De Moletom Masculina Nike</h4>
+                          <p>R$ 200,00</p>
                           </div>            
           </div>
       </div>
